design-principles-02/src/main/java/com/farhad/example/design_principles02/dessert/bad/icecream/Vanilla.java
package com.farhad.example.design_principles02.dessert.bad.icecream;

public class Vanilla extends IceCream {

	public Vanilla(String taste) {
		super(taste);
		//TODO Auto-generated constructor stub
	}

	@Override
	public void serve() {
		// TODO Auto-generated method stub
		throw new UnsupportedOperationException("Unimplemented method 'serve'");
	}

}
